[update]: init custom protocol

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,6 @@ wry = { version = "0.47.2", features = ["devtools", "fullscreen", "linux-body", 
 tao = { version = "0.30.8", features = ["serde"] }
 serde = { version = "1.0.215", features = ["derive"] }
 pyo3 = "0.23.2"
+png = "0.17.14"
+image = "0.25.5"
+http = "1.1.0"
